[package]
name = "youstat"
version = "0.1.0"
authors = ["TheDutchMC <t.debruijn@array21.dev>"]
edition = "2018"
description = "YouTube Music listening statistics parser"
repository = "https://github.com/TheDutchMC/youstat"
homepage = "https://github.com/TheDutchMC/youstat"
keywords = ["YouTube", "Statistics", "Metrics"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
reqwest = { version = "0.11.3", features = ["json"]}
chrono = "0.4.19"
clap = "2.33.3"

[dependencies.tokio]
version = "1.11.0"
features = ["rt"]